create user api doing
